codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_clears_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ 对话已中断，请告诉模型接下来该如何调整。若出现问题，可使用 `/feedback` 反馈。
