codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 模 型 与 推 理 强 度
  可 通 过 运 行  codex -m <model_name> 或 在  config.toml 中 访 问 旧 版 模 型

› 1. test-visible-model (current)  test-visible-model description

  按  Enter 选 择 推 理 强 度 ， 或 按  Esc 关 闭 。
